Fix spacing

--- a/docs/_sass/docs/hero.scss
+++ b/docs/_sass/docs/hero.scss
@@ -26,12 +26,18 @@
       margin-left: 0;
     }
 
-    .bd-hero-title {
-      max-width: 80%;
-    }
-
     .bd-hero-prints {
       justify-content: flex-start;
+    }
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .bd-hero.is-docs {
+    flex-wrap: nowrap;
+
+    .bd-hero-title {
+      max-width: 80%;
     }
   }
 }
