--- a/docs/_sass/home/amis.scss
+++ b/docs/_sass/home/amis.scss
@@ -5,6 +5,8 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   position: relative;
+  margin: 0 -1rem;
+  justify-content: center;
 }
 
 .bd-ami {
