--- a/docs/assets/css/website.css
+++ b/docs/assets/css/website.css
@@ -34429,6 +34429,8 @@ has-background-moon.is-hoverable:active {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   position: relative;
+  margin: 0 -1rem;
+  justify-content: center;
 }
 
 .bd-ami {
@@ -36302,13 +36304,18 @@ has-background-moon.is-hoverable:active {
 .bd-hero.is-docs .bd-hr {
   margin-left: 0;
 }
-.bd-hero.is-docs .bd-hero-title {
-  max-width: 80%;
-}
 .bd-hero.is-docs .bd-hero-prints {
   justify-content: flex-start;
 }
 
+@media screen and (min-width: 1000px) {
+  .bd-hero.is-docs {
+    flex-wrap: nowrap;
+  }
+  .bd-hero.is-docs .bd-hero-title {
+    max-width: 80%;
+  }
+}
 @media screen and (min-width: 1200px) {
   .bd-hero.is-docs {
     flex-wrap: nowrap;
